# kamtor_test

./: Bitstamp_BTCUSDT_1h.csv  Bitstamp_ETHUSDT_1h.csv  main.py  pyproject.toml
