[tool.poetry]
name = "whatnot"
version = "0.1.0"
description = ""
authors = ["Roman <asanovroma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.1"
numpy = "^1.24.2"
pandas = "^1.5.3"
websockets = "^10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
